syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/datmaithanh/orderfood/pb";

message User {
    string username = 1;
    string full_name = 2;
    string role = 3;
    string email = 4;
    google.protobuf.Timestamp created_at = 5;    
}